Refactor index.html and main.js, add new skill images, and update cursor styles

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ body {
   background: #fff;
 }
 
+/* * {
+  cursor: url(../images/peacock.gif), auto;
+} */
+
 #page {
   position: relative;
   overflow-x: hidden;
